raw-k8-yaml/ingress-nginx.yaml
# A dummy file for example 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "api.fastapi.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fastapi # Get the accurate svc name by `kubectl get svc`
            port: 
              number: 8080
